--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -203,6 +203,8 @@
 .m-t-minus-8{margin-top:-8px;}
 .m-t-minus-5{margin-top:-5px;}
 .m-t-minus-10{margin-top:-10px;}
+.m-t-minus-15{margin-top:-15px;}
+.m-t-minus-20{margin-top:-20px;}
 .m-t-minus-24{margin-top:-24px;}
 .geneder-margin{margin-top: -24px;}
 .m-t-2{margin-top:2px;}
@@ -885,7 +887,137 @@ margin-left:10px;
 .rating-top{top: 44% !important;}
 .rating-row-customize{width: 6%;
     padding-right: 0px;}
- 
+	
+/************* student profile css ******************/
+/*s= is used for Student*/
+.s-profile-header
+{
+	color: #8995a5 !important;
+    font-size: 16px !important;
+}
+.s-profile-content
+{
+	padding: 50px 0px;
+}
+.s-profile-left-img
+{
+	height:195px;
+	width: 100%;
+}
+.s-height{height: 295px;}
+.s-profile-pic-card{
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-radius: 50%;
+  background-color: rgb(229, 233, 242); 
+  box-shadow: 0px 0px 40px 0px rgba(182, 203, 255, 0.3);
+  display:inline-block; 
+  width: 110px;
+    height: 110px;
+  
+}
+.s-profile-center{text-align:center}
+.s-profile-card-shadow{box-shadow:unset !important;}
+.s-profile-name
+{ 
+  font-size: 20px;
+  font-family: "Open Sans";
+  color: rgb(0, 0, 0);
+  font-weight: 600;    
+}
+.s-profile-name-small
+{ 
+  font-size: 16px;
+  font-family: "Open Sans";
+  color: rgb(0, 0, 0);
+  font-weight: 600;    
+}
+.s-profile-specialization
+{ 
+  font-size:15px;
+  font-family: "Open Sans";
+  color: rgb(0, 0, 0);
+  font-weight: 600;    
+}
+.s-profile-contact
+{ 
+  font-size:13px;
+  font-family: "Open Sans";
+  color: rgb(0, 0, 0);     
+}
+.s-profile-other
+{
+  font-size:13px;
+  font-family: "Open Sans";
+  color: rgb(0, 0, 0);
+  font-weight: 600; 	
+}
+.s-profile-text-gray{
+  font-size: 14px;
+  font-family: "Open Sans";
+  color: rgb(153, 153, 173); 
+  text-align: left; 
+}
+.s-black{color:black;}
+.s-bold{font-weight:600;}
+.s-profile-padding-r-0{padding-right:1px;}
+.s-profile-padding-l-0{padding-left:0px;}
+.s-profile-cover-img
+{ 
+    height: 100%;
+    width: 100%;
+     
+}
+.s-profile-edite-m
+{
+	margin-right: -18px;
+    margin-top: -4px;
+}
+.s-profile-hr
+{
+	margin-top: 12px !important; 
+    margin-left: -10px !important;
+    margin-right: -10px !important;
+}
+.s-icon-section
+{
+	width: 72px;
+    height: 72px;
+    background: white;
+    border: 1px solid #8080805e;
+    border-radius: 10px;
+}
+.s-p-2{padding:2px;}
+.s-icon
+{
+	width: 100%;
+    border-radius: 5px;
+    height: 100%;
+}
+.s-profile-text{
+  font-size: 14px;
+  font-family: "Open Sans";
+  color: rgb(68, 68, 73);
+  font-weight: 600;   
+}
+.s-font{font-family:"Open Sans";}
+.s-gray
+{
+	color:#9999ad;
+}
+.s-viewmore{background:#f05510}
+.s-v-more-icon
+{
+	display: inline-block;
+    height: 16px;
+    width: 16px;
+    line-height: 17px !important;
+    background: #c7460d;
+    border-radius: 50%;
+    text-align: center;
+    margin-left: 5px;
+}
  @media screen and (max-width: 767px){
 	 .top-header-author {
     position: absolute;
@@ -896,9 +1028,41 @@ margin-left:10px;
 }
 .pro-left-padding-right{padding-right:12px !important;}
 .pro-right-padding-left{padding-left:12px !important;}
+.s-profile-padding-r-0{padding-right:12px;}
+.s-profile-padding-l-0{padding-left:12px;margin-bottom: 14px;}
 .margin-rating-bar{margin-top:15px;}
 .rating-row-customize{width:unset;
     padding-right:unset;}
+.s-profile-text {
+    font-size: 12px;      
+}
+..pro-small-text-g {
+    font-size: 12px; 
+}
+.s-icon-section {
+    width: 60px;
+    height: 60px; 
+}
+.s-profile-name
+{ 
+  font-size: 18px;     
+}
+.s-profile-name-small
+{ 
+  font-size: 15px;   
+}
+.s-profile-specialization
+{ 
+  font-size:13px;   
+}
+.s-profile-contact
+{ 
+  font-size:12px;    
+}
+.s-profile-other
+{
+  font-size:12px; 	
+}	
 }
 /*media 767 End Here ****/
 /*media for ipad only****/
@@ -923,7 +1087,19 @@ margin-left:10px;
 .body-b .onmobile{padding: 55px !important;}
 .rating-row-customize{width:unset;
     padding-right:unset;}
+ 
+.s-profile-padding-r-0{padding-right:12px;}
+.s-profile-padding-l-0{padding-left:12px;margin-bottom: 14px;}
+.s-profile-content {
+    padding: 0px 0px;
 }
+.s-height {
+    height: 180px;
+}
+.s-profile-content {
+    padding: 0px 0px;
+}
+
 }
 /*media for ipad Pro only****/
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1200px) {
