--- a/css/shortcodes/style.css
+++ b/css/shortcodes/style.css
@@ -1832,6 +1832,8 @@ i[class^="flaticon-"]:before {
 	height:37px;
 	line-height: 35px !important;
 }
+.center-on-page{margin-top:-55px;}
+.boxforinput{padding:0px 25px;}
 /* ================= Material CSS Customization ==================== */
 nav {
     background-color: transparent;
@@ -1994,6 +1996,7 @@ nav ul a {
 }
 .mobileview{height:auto;}
 .navbar-form{margin-left:0px;}
+.boxforinput{padding:0px 5px;}
 }
 
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
@@ -2007,7 +2010,7 @@ nav ul a {
 						    display:block;
 					
 }
- 
+ .boxforinput{padding:0px 15px;}
 }
 
 
