--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1020,6 +1020,37 @@ margin-left:10px;
     text-align: center;
     margin-left: 5px;
 }
+/*** Tution As a service css ***/
+.g-mapcard-black
+{
+	width: 240px !important;
+}
+.gm-style-iw
+{
+	left:16px !important;
+	/* width:294px !important; */
+}
+.g-mapcard-left-img
+{
+	height:165px;
+	width: 100%;
+}
+.g-mapcard-name-small {
+    font-size: 16px;
+    font-family: "Open Sans";
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+}
+.g-mapcard-text-gray {
+    font-size: 14px;
+    font-family: "Open Sans";
+    color: rgb(153, 153, 173);
+    text-align: left;
+}
+.g-mapcard-black{color:black;}
+.g-mapcard-bold{font-weight:600;}
+
+
  @media screen and (max-width: 767px){
 	 .top-header-author {
     position: absolute;
