--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1020,6 +1020,9 @@ margin-left:10px;
     text-align: center;
     margin-left: 5px;
 }
+/* .r_rating{width: 50%;} */
+.rating-height{height: 480px;}
+.institute-rating{width:auto !important;}
  @media screen and (max-width: 767px){
 	 .top-header-author {
     position: absolute;
