--- a/css/shortcodes/style.css
+++ b/css/shortcodes/style.css
@@ -1832,7 +1832,7 @@ i[class^="flaticon-"]:before {
 	height:37px;
 	line-height: 35px !important;
 }
-.center-on-page{margin-top:-55px;}
+.forgetpassword-margin-top{margin-top:-55px;}
 .boxforinput{padding:0px 25px;}
 /* ================= Material CSS Customization ==================== */
 nav {
