--- a/css/theme-default/materialadmin.css
+++ b/css/theme-default/materialadmin.css
@@ -7616,7 +7616,25 @@ sub.badge {
 .panel-group .card.expanded:first-child {
 	margin-top: 0;
 }
-
+.panel-group .card.expanded>div.m-r-a-head-dashboard:before{
+	position: absolute;
+    display: inline-block;
+    content: '';
+	width:0;
+    top: 97px;
+    border-right: 12px solid transparent;
+    border-left: 12px solid transparent;
+    border-top: 12px solid white;
+    right: 25px; 
+    left: 20px;
+    z-index: 1050;
+}
+.m-r-a-dashboard{background:#f3ebeb;}
+.m-r-a-head-dashboard
+{
+	padding: 0px 12px !important;
+	border-bottom: 1px solid rgba(150, 156, 156, 0.14)  !important;
+}
 .timeline {
 	position: relative;
 	list-style: none;
@@ -9119,6 +9137,8 @@ li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 {
    }
    .analysis-content
    {margin: 50px 0 0 -35px; padding: 10px 10px 10px 10px;}
+   
+   .panel-group .card.expanded>div.m-r-a-head-dashboard:before{margin-top:188px;}
 }
 @media only screen and  (device-width: 768px) and (device-height: 1024px) {
 	.hide-onMobile{display:none ! important;}
@@ -9129,6 +9149,7 @@ li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 {
 	{
 	  margin-bottom:5px! important;font-weight:600! important;font-size:12px! important;
 	} 
+	.panel-group .card.expanded>div.m-r-a-head-dashboard:before{margin-top:137px;}
 }
 .imgdb {
 	height: 600px;
