--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1130,7 +1130,7 @@ margin-left:10px;
     margin-right: -2px;
     right: 8%;
 }
- 
+
  @media screen and (max-width: 767px){
 	 .top-header-author {
     position: absolute;
@@ -1181,7 +1181,11 @@ margin-left:10px;
 }
 .dropi-menu:before { 
     right:64%;
-}	
+}
+/* minus marg on mobile= (m-o-m)****/
+.m-o-m-t-10{margin-top:-10px;}
+.m-o-m-t-15{margin-top:-15px;}
+.m-o-m-t-20{margin-top:-20px;} 	
 }
 /*media 767 End Here ****/
 /*media for ipad only****/
