--- a/css/blocks.css
+++ b/css/blocks.css
@@ -92,7 +92,7 @@ margin-bottom: -20px;  }
 
 /*------------- #BUTTONS --------------*/
 .btn {
-  color: black;
+  /* color: black; */
   margin-bottom: 15px;
   position: relative; }
   .btn:hover {
