--- a/css/tutor-style.css
+++ b/css/tutor-style.css
@@ -5403,11 +5403,11 @@ figure {
 }
 
 /* line 10, ../scss/helpers/_forms.scss */
-.input-group span, .form-group span, label, .form-inline span {
+/* .input-group span, .form-group span, label, .form-inline span {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 10px;
-}
+} */
 
 /* line 15, ../scss/helpers/_forms.scss */
 .form-control {
