--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -441,7 +441,7 @@ padding: 0px 10px !important;}
   
 } 
 .td-dashboard{
-    font-size: 15px;
+    font-size: 12px;
     color: rgb(64, 68, 71);
     font-weight: 500;
     letter-spacing: 0.4px;
@@ -522,10 +522,11 @@ padding: 0px 10px !important;}
 	.fc-view, .fc-view>table {
     position: relative;
     z-index: 1;
-    height:174px !important;
+   height: 320px !important;
     bottom: 0;
     overflow-y: auto;
 }
+.calendar-cardHeight{height: 385px;}
 .fc-view-container{margin-left:-12px;margin-right:-12px;}
 .fc-toolbar button {
     position: relative;
@@ -1232,6 +1233,17 @@ margin-left:10px;
 {
   height:515px;
 }
+.myrequest-table-width{width: 125% !important;
+    max-width: 125% !important;}
+.tutor-payment-request-section{height:190px;}
+.t-d-p-r-cardheight{height: 232px;}
+.myreq-height
+{
+	height: 143px;
+    overflow-y: auto;
+    padding: 0px 10px !important;
+}
+
  @media screen and (max-width: 767px){
 	 .top-header-author {
     position: absolute;
