--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -756,6 +756,7 @@ margin-left:10px;
 	border-bottom: 1px solid rgba(150, 156, 156, 0.14)  !important;
 }
 .m-r-c-p-group{margin-bottom:0px !important;padding: 5px 10px;}
+.m-r-c-p-group-s{margin-bottom:0px !important;}
 .m-r-a-pro{padding: 0px 0px !important;}
 .m-r-a-body
 {
@@ -784,7 +785,7 @@ margin-left:10px;
     border-width: 1px;
 }
 .m-r-c-border{border:1px solid #ada4a4ad;}
-.action-area{margin-top:-40px;}
+.action-area{margin-top:25px;}
 .btn-icon-toggle{height:36px;}
  
 .timeline-padding{padding:5px 5px !important}
