--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -518,17 +518,51 @@ padding: 0px 10px !important;}
 }
 .fc-toolbar .fc-right {
     float: right;
-    margin-top: 8px !important;
+    margin-top: 13px !important;
+    margin-bottom: -2px;
 }
-	.fc-view, .fc-view>table {
+.fc-view, .fc-view>table {
     position: relative;
     z-index: 1;
-   height: 320px !important;
+    height: 320px !important;
     bottom: 0;
     overflow-y: auto;
 }
+.fc-view::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color:#dcd5d5;
+}
+
+.fc-view::-webkit-scrollbar
+{
+	width: 10px !important;
+    height: 10px;
+	background-color:#ffffff;
+}
+
+.fc-view::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color:#ffffff;
+}
+.fc-scroller{height:100% !important;}
+.fc-scroller{
+     overflow-y:unset !important;  
+     overflow-x:unset !important;  
+}
+.fc-basic-view .fc-body .fc-row {
+    height:140px !important;
+}
 .calendar-cardHeight{height: 385px;}
 .fc-view-container{margin-left:-12px;margin-right:-12px;}
+.fc-toolbar .fc-state-active, .fc-toolbar .ui-state-active
+{
+	border:1px solid #1190e8 !important;
+	border-radius:1px !important;
+}
 .fc-toolbar button {
     position: relative;
     border: 0;
